# devicetree.resource

./: CMakeLists.txt  ldscript.lds
sfd/: devicetree_lib.sfd
src/: addram.c  closekey.c  devicetree.h  findproperty.c  getchild.c  getkeyname.c  getparent.c  getproperty.c  getproplen.c  getpropname.c  getpropvalue.c  init.c  main.c  openkey.c
